--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,31 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/screen.css">
 
     </head>
     <body>
-
-        <div class="site">
+    	<div class="container">
+    		<div class="row">
+	    		<div class="col-md-8">
+	    			Header
+	    		</div>
+	    		<div class="col-md-4">
+	    			<ul class="nav nav-pills pull-right">
+	    			  <li class="active"><a href="#">Home</a></li>
+	    			  <li><a href="#">Profile</a></li>
+	    			  <li><a href="#">Messages</a></li>
+	    			</ul>
+	    		</div>
+	    	</div>
+	    	<div class="row">
+	    		<div class="col-md-12"></div>
+	    	</div>
+    	</div>
+    </body>
+</html>
+<!--         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
@@ -42,3 +61,4 @@
 
     </body>
 </html>
+ -->
