yeah, random stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,50 +15,22 @@
 
     </head>
     <body>
-    	<div class="container">
-    		<div class="row">
-	    		<div class="col-md-8">
-	    			Header
-	    		</div>
-	    		<div class="col-md-4">
-	    			<ul class="nav nav-pills pull-right">
-	    			  <li class="active"><a href="#">Home</a></li>
-	    			  <li><a href="#">Profile</a></li>
-	    			  <li><a href="#">Messages</a></li>
-	    			</ul>
-	    		</div>
-	    	</div>
-	    	<div class="row">
-	    		<div class="col-md-12"></div>
-	    	</div>
-    	</div>
-    </body>
-</html>
-<!--         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    Header
+                </div>
+                <div class="col-md-4">
+                    <ul class="nav nav-pills pull-right">
+                      <li class="active"><a href="#">Home</a></li>
+                      <li><a href="#">Profile</a></li>
+                      <li><a href="#">Messages</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
+            <div class="row">
+                <div class="col-md-12">{{ content }}</div>
             </div>
-          </div>
         </div>
-
     </body>
 </html>
- -->
