--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,11 @@
 ---
-layout: default
+layout: full-page
 ---
-<h2>{{ page.title }}</h2>
+
+<ol class="breadcrumb">
+  <li><a href="/news/">News</a></li>
+  <li class="active">{{ page.title }}</li>
+</ol>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
