--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,11 @@ layout: full-page
 ---
 
 <ol class="breadcrumb">
-  <li><a href="/news/">News</a></li>
+  <li><a href="/#news">News</a></li>
   <li class="active">{{ page.title }}</li>
 </ol>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
-{{ content }}
+  {{ content }}
 </div>
