--- a/_layouts/full-page.html
+++ b/_layouts/full-page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="heading">
+  {% comment %}<img src="/assets/slide/{{ site.time | date:'%S' | modulo:11 | plus:1 }}.jpg" /> {% endcomment %}
   <div class="container" style="margin-top:120px;">
     <div class="row">
       <div class="col-md-12">
@@ -11,7 +12,6 @@ layout: default
     </div>
   </div>
 </div>
-
 <div class="container" style="margin-top:220px;">
   <div class="row">
     <div class="col-md-12">
