--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,9 +24,7 @@ layout: default
         <img src="/assets/slide/1.jpg" alt="First slide">
         <div class="container">
           <div class="carousel-caption">
-            <h1>A survival Minecraft server run by
-            <a href="https://twitter.com/eruraindil" class="twitter-follow-button" data-show-count="false" data-lang="en" data-size="large">@eruraindil</a></h1>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            <h1>A survival Minecraft server</h1>
             <!--<p><code>mc.mroberts.me</code></p>
             <p><a class="btn btn-lg btn-danger" href="#" role="button">Sign up today</a></p>-->
           </div>
@@ -74,6 +72,27 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12">{{ content }}</div>
+      <div class="col-md-9">{{ content }}</div>
+      <div class="col-md-3">
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        {% for member in site.data.members %}
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" src="https://minotar.net/avatar/{{ member.name }}/34.png" alt="{{ member.name }}s head">
+            </a>
+            <div class="media-body">
+              <h4 class="media-heading">
+                {{ member.name }} <span class="label label-{% if member.role == 'owner' %}primary{% elsif member.role == 'op' %}warning{% else %}default{% endif %}">{{ member.role | capitalize }}</span>
+              </h4>
+              {% if member.twitter != nil %}
+                <br /><a href="https://twitter.com/{{member.twitter}}" class="twitter-follow-button" data-show-count="true" data-lang="en">@{{member.twitter}}</a>
+            {% endif %}
+            </div>
+          </div>
+          {% if member.role == 'owner' %}
+            <hr>
+          {% endif %}
+        {% endfor %}
+      </div>
     </div>
   </div>
